; ModuleID = '/home/carl/AnghaBench/linux/security/extr_security.c_security_prepare_creds.c'
source_filename = "/home/carl/AnghaBench/linux/security/extr_security.c_security_prepare_creds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cred = type { i32 }

@cred_prepare = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @security_prepare_creds(%struct.cred* %0, %struct.cred* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.cred*, align 8
  %6 = alloca %struct.cred*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.cred* %0, %struct.cred** %5, align 8
  store %struct.cred* %1, %struct.cred** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.cred*, %struct.cred** %5, align 8
  %10 = load i32, i32* %7, align 4
  %11 = call i32 @lsm_cred_alloc(%struct.cred* %9, i32 %10)
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %3
  %15 = load i32, i32* %8, align 4
  store i32 %15, i32* %4, align 4
  br label %30

16:                                               ; preds = %3
  %17 = load i32, i32* @cred_prepare, align 4
  %18 = load %struct.cred*, %struct.cred** %5, align 8
  %19 = load %struct.cred*, %struct.cred** %6, align 8
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @call_int_hook(i32 %17, i32 0, %struct.cred* %18, %struct.cred* %19, i32 %20)
  store i32 %21, i32* %8, align 4
  %22 = load i32, i32* %8, align 4
  %23 = call i64 @unlikely(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %16
  %26 = load %struct.cred*, %struct.cred** %5, align 8
  %27 = call i32 @security_cred_free(%struct.cred* %26)
  br label %28

28:                                               ; preds = %25, %16
  %29 = load i32, i32* %8, align 4
  store i32 %29, i32* %4, align 4
  br label %30

30:                                               ; preds = %28, %14
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i32 @lsm_cred_alloc(%struct.cred*, i32) #1

declare dso_local i32 @call_int_hook(i32, i32, %struct.cred*, %struct.cred*, i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @security_cred_free(%struct.cred*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
